--- a/solution/webapp1/values.yaml
+++ b/solution/webapp1/values.yaml
@@ -9,7 +9,7 @@ namespace: default
 configmap:
   name: myhelmapp-configmap-v1
   data:
-    CUSTOM_HEADER: 'This app was deployed with helm!'
+    CUSTOM_HEADER: 'Fixed the update issue with helm. This app was deployed with helm!'
 
 image:
   name: devopsjourney1/mywebapp
